Flush async updates during WebRenderLayerManager::ClearCachedResources
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: aosmond, Assigned: aosmond)
Details
Attachments
(1 file)
There may be async updates queued for the layer manager when we call WebRenderLayerManager::ClearCachedResources. This could be an animated image updating its next frame when the user switches tabs. Currently this can cause an entry to be added to the critical log because we end up deleting the animated image key before the update is applied and the resource update fails. It is better to flush the update first, before clearing, which should largely be a no-op since we are already clearing the display list itself.
| Assignee | ||
Comment 1•5 years ago
|
||
STR:
- Open https://www.reddit.com, wait for the page to finish loading.
- Open a new tab, go to about:support and observe the missing "Updating unknown shared surface" entry in the critical log.
| Assignee | ||
Comment 2•5 years ago
|
||
Comment 4•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
I'm trying to reproduce the issue following the mentioned steps but I'm having trouble getting to the described result. Can you please provide more information?
I mention that I can't find the "Updating unknown shared surface" entry in the latest Nightly either.
| Assignee | ||
Updated•4 years ago
|
Description
•