Bug 1703244 - Flush pending async resource updates when clearing layer manager cache. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D110925